[project]
name = "color_lib"
version = "1.0"
authors = [{ name="Nora Rose", email="transcrime@tuta.com" }]
description = "A very basic Library that allows you to have RGB code on your text"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0 license"}
dependencies = ["None"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GPL-3.0 license",
  "Operating System :: OS Independent"
]


[project.urls]
Homepage = "https://github.com/transcrimee/color_lib"
Issues = "https://github.com/transcrimee/color_lib/issues"
